--- a/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
@@ -1,17 +1,16 @@
 ﻿<Window x:Class="rekenrace_roan.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:rekenrace_roan"
-        mc:Ignorable="d"
-        Title="MainWindow"
+        xmlns:models="clr-namespace:rekenrace_roan.Models"
+        Title="Rekenrace"
         Height="450"
         Width="800">
+    <Window.Resources>
+        <models:Player x:Key="PlayerModel" />
+        <local:StringLengthToBooleanConverter x:Key="StringLengthToBooleanConverter" />
+    </Window.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition Height="auto" />
@@ -43,19 +42,22 @@
                      Width="200"
                      Height="30"
                      Margin="5"
+                     Text="{Binding Name, Source={StaticResource PlayerModel}, UpdateSourceTrigger=PropertyChanged}"
                      VerticalAlignment="Center"
                      HorizontalAlignment="Center" />
             <ComboBox x:Name="difficultyDropdown"
                       Width="150"
                       Height="30"
                       Margin="5"
+                      SelectedValuePath="Content"
+                      SelectedValue="{Binding Difficulty, Source={StaticResource PlayerModel}}"
                       SelectedIndex="0">
-                <ComboBoxItem IsEnabled="False"
-                              Content="Niveau" />
-                <ComboBoxItem Content="Makkelijk" />
-                <ComboBoxItem Content="Gemiddeld" />
-                <ComboBoxItem Content="Moeilijk" />
+                <ComboBoxItem IsEnabled="False">Niveau</ComboBoxItem>
+                <ComboBoxItem>Makkelijk</ComboBoxItem>
+                <ComboBoxItem>Gemiddeld</ComboBoxItem>
+                <ComboBoxItem>Moeilijk</ComboBoxItem>
             </ComboBox>
+
         </StackPanel>
 
         <!-- Start Button -->
@@ -64,6 +66,8 @@
                 Height="100"
                 Content="Start"
                 Grid.Row="2"
-                Click="btnStart_Click" />
+                Click="btnStart_Click"
+                IsEnabled="{Binding Name.Length, Source={StaticResource PlayerModel}, Converter={StaticResource StringLengthToBooleanConverter}}" />
+        
     </Grid>
 </Window>
