--- a/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
@@ -1,19 +1,30 @@
 ﻿<Window x:Class="rekenrace_roan.views.QuizWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:rekenrace_roan.views"
-        mc:Ignorable="d"
-        Title="QuizWindow" Height="450" Width="800">
+        xmlns:viewmodels="clr-namespace:rekenrace_roan.ViewModels"
+        Title="Rekenrace Quiz"
+        Height="450"
+        Width="800">
+    <Window.Resources>
+        <Style x:Key="HeaderLabelStyle"
+               TargetType="Label">
+            <Setter Property="VerticalAlignment"
+                    Value="Center" />
+            <Setter Property="FontSize"
+                    Value="24" />
+            <Setter Property="FontWeight"
+                    Value="Bold" />
+            <Setter Property="Margin"
+                    Value="10" />
+        </Style>
+    </Window.Resources>
+
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
-            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <!-- Top Header with Background -->
@@ -23,22 +34,54 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
-                <Label Content="Naam Speler"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"
-                       Margin="10"
-                       FontSize="24"
-                       FontWeight="Bold"
-                       Grid.Column="0" />
-                <Label Content="Niveau"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10"
-                       FontSize="24"
-                       FontWeight="Bold"
-                       Grid.Column="1" />
+                <Label Content="{Binding Player.Name}"
+                       Style="{StaticResource HeaderLabelStyle}"
+                       Grid.Column="0"
+                       HorizontalAlignment="Left" />
+                <Label Content="{Binding Player.Difficulty}"
+                       Style="{StaticResource HeaderLabelStyle}"
+                       Grid.Column="1"
+                       HorizontalAlignment="Right" />
+                <Button Content="Terug"
+                        Grid.Column="2"
+                        Margin="10"
+                        Click="BackToMainMenu_Click" />
             </Grid>
         </Border>
+
+        <!-- Quiz Content -->
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <TextBlock Text="{Binding CurrentProblem.Equation}"
+                       FontSize="36"
+                       Margin="10" />
+            <TextBlock Text="{Binding CurrentProblemNumber, StringFormat=Vraag {0} van {1}}"
+                       HorizontalAlignment="Center"
+                       Margin="10" />
+            <TextBox x:Name="txtAnswer"
+                     Width="200"
+                     Height="40"
+                     FontSize="24"
+                     Text="{Binding UserAnswer, UpdateSourceTrigger=PropertyChanged}"
+                     PreviewTextInput="txtAnswer_PreviewTextInput" />
+            <Button Content="Controleer"
+                    Width="200"
+                    Height="40"
+                    Margin="10"
+                    Command="{Binding CheckAnswerCommand}"
+                    Click="CheckAnswer_Click" />
+        </StackPanel>
+
+        <!-- Navigation -->
+        <Button Content="Volgende"
+                Grid.Row="2"
+                Width="200"
+                Height="40"
+                Margin="10"
+                Command="{Binding NextProblemCommand}"
+                Click="NextProblem_Click" />
     </Grid>
 </Window>
