--- a/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
@@ -9,6 +9,28 @@
     <Window.Resources>
         <models:Player x:Key="PlayerModel" />
         <local:StringLengthToBooleanConverter x:Key="StringLengthToBooleanConverter" />
+
+        <!-- Style for High Score Headers -->
+        <Style x:Key="HighScoreHeaderStyle"
+               TargetType="TextBlock">
+            <Setter Property="FontWeight"
+                    Value="Bold" />
+            <Setter Property="FontSize"
+                    Value="16" />
+            <Setter Property="Margin"
+                    Value="5" />
+            <Setter Property="HorizontalAlignment"
+                    Value="Left" />
+        </Style>
+
+        <!-- Style for High Score Rows -->
+        <Style x:Key="HighScoreRowStyle"
+               TargetType="TextBlock">
+            <Setter Property="Margin"
+                    Value="5,2" />
+            <Setter Property="HorizontalAlignment"
+                    Value="Left" />
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -80,27 +102,60 @@
                            FontWeight="Bold"
                            HorizontalAlignment="Center"
                            Margin="10" />
-                <ListView x:Name="lvHighScores"
-                          Height="200"
-                          Margin="10">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Name}"
-                                           Grid.Column="0" />
-                                <TextBlock Text="{Binding Score}"
-                                           Grid.Column="1" />
-                                <TextBlock Text="{Binding Date, StringFormat=dd/MM/yyyy}"
-                                           Grid.Column="2" />
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+
+                <!-- Difficulty-based High Scores Grid -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <!-- Makkelijk (Easy) Column -->
+                    <StackPanel Grid.Column="0">
+                        <TextBlock Text="Makkelijk"
+                                   Style="{StaticResource HighScoreHeaderStyle}" />
+                        <ListView x:Name="lvMakkelijkHighScores"
+                                  ItemsSource="{Binding MakkelijkHighScores}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding FormattedScore}"
+                                               Style="{StaticResource HighScoreRowStyle}" />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+
+                    <!-- Gemiddeld (Medium) Column -->
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Text="Gemiddeld"
+                                   Style="{StaticResource HighScoreHeaderStyle}" />
+                        <ListView x:Name="lvGemiddeldHighScores"
+                                  ItemsSource="{Binding GemiddeldHighScores}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding FormattedScore}"
+                                               Style="{StaticResource HighScoreRowStyle}" />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+
+                    <!-- Moeilijk (Hard) Column -->
+                    <StackPanel Grid.Column="2">
+                        <TextBlock Text="Moeilijk"
+                                   Style="{StaticResource HighScoreHeaderStyle}" />
+                        <ListView x:Name="lvMoeilijkHighScores"
+                                  ItemsSource="{Binding MoeilijkHighScores}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding FormattedScore}"
+                                               Style="{StaticResource HighScoreRowStyle}" />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                </Grid>
             </StackPanel>
         </Border>
     </Grid>
