--- a/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/MainWindow.xaml
@@ -316,66 +316,39 @@
                 BorderThickness="2"
                 Margin="20">
             <StackPanel>
-                <TextBlock Text="High Scores"
+                <TextBlock Text="High Scores Top 10"
                            FontSize="20"
                            FontWeight="Bold"
                            HorizontalAlignment="Center"
                            Margin="10" />
 
-                <!-- Difficulty-based High Scores Grid -->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <ListView x:Name="lvTopHighScores"
+                          ItemsSource="{Binding TopHighScores}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding Name}"
+                                           Grid.Column="0"
+                                           Style="{StaticResource HighScoreRowStyle}" />
+                                <TextBlock Text="{Binding Score, StringFormat='{}{0} van de 10 goed'}"
+                                           Grid.Column="1"
+                                           Style="{StaticResource HighScoreRowStyle}" />
 
-                    <!-- Makkelijk (Easy) Column -->
-                    <StackPanel Grid.Column="0">
-                        <TextBlock Text="Makkelijk"
-                                   Style="{StaticResource HighScoreHeaderStyle}" />
-                        <ListView x:Name="lvMakkelijkHighScores"
-                                  ItemsSource="{Binding MakkelijkHighScores}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding FormattedScore}"
-                                               Style="{StaticResource HighScoreRowStyle}" />
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>
+                                <TextBlock Text="{Binding Date, StringFormat='{}{0:dd/MM/yyyy}'}"
+                                           Grid.Column="2"
+                                           Style="{StaticResource HighScoreRowStyle}" />
 
-                    <!-- Gemiddeld (Medium) Column -->
-                    <StackPanel Grid.Column="1">
-                        <TextBlock Text="Gemiddeld"
-                                   Style="{StaticResource HighScoreHeaderStyle}" />
-                        <ListView x:Name="lvGemiddeldHighScores"
-                                  ItemsSource="{Binding GemiddeldHighScores}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding FormattedScore}"
-                                               Style="{StaticResource HighScoreRowStyle}" />
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>
-
-                    <!-- Moeilijk (Hard) Column -->
-                    <StackPanel Grid.Column="2">
-                        <TextBlock Text="Moeilijk"
-                                   Style="{StaticResource HighScoreHeaderStyle}" />
-                        <ListView x:Name="lvMoeilijkHighScores"
-                                  ItemsSource="{Binding MoeilijkHighScores}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding FormattedScore}"
-                                               Style="{StaticResource HighScoreRowStyle}" />
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>
-                </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackPanel>
         </Border>
+
     </Grid>
 </Window>
