--- a/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
@@ -18,11 +18,24 @@
             <Setter Property="Margin"
                     Value="10" />
         </Style>
+
+        <Style x:Key="FeedbackTextStyle"
+               TargetType="TextBlock">
+            <Setter Property="HorizontalAlignment"
+                    Value="Center" />
+            <Setter Property="Margin"
+                    Value="10" />
+            <Setter Property="FontSize"
+                    Value="18" />
+            <Setter Property="FontWeight"
+                    Value="Bold" />
+        </Style>
     </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -50,8 +63,13 @@
             </Grid>
         </Border>
 
+        <!-- Feedback Area -->
+        <TextBlock x:Name="txtFeedback"
+                   Grid.Row="1"
+                   Style="{StaticResource FeedbackTextStyle}" />
+
         <!-- Quiz Content -->
-        <StackPanel Grid.Row="1"
+        <StackPanel Grid.Row="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
             <TextBlock Text="{Binding CurrentProblem.Equation}"
